Refactor Authentication